<resources>


    <!--Important -->
    <string name="WordpressLink">https://www.gamerevolution.com/</string>
    <!--Important -->


    <!--Important -->
    <string name="InterstitialAdID">ca-app-pub-3940256099942544/8691691433</string>
    <!--Important -->


    <string name="app_name">Nova News</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="latest">Latest :</string>
    <string name="comments">Comments :</string>
    <string name="no_comment_yet">No Comment Yet</string>
    <string name="saved">Saved</string>
    <string name="you_haven_t_saved_anything">You haven\'t saved anything</string>
    <string name="settings">Settings</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="share_this_app">Share This App</string>
    <string name="empty">Empty</string>


</resources>