<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Go to saved"
        android:textAlignment="center"
        android:textColor="#0000FF"
        android:textSize="17sp"
        android:visibility="gone"
        android:fontFamily="@font/mabry_pro_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmptyText" />

    <TextView
        android:id="@+id/EmptyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/mabry_pro_bold"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textColor="@color/headlinesText"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emptyImage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/emptyImage"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"

        android:src="@drawable/ic_empty"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:fontFamily="@font/mabry_pro_bold"
        android:textColor="@color/headlinesText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settingsIcon"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <ImageView
        android:id="@+id/BookmarkIcon"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_bookmark_border"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@id/settingsIcon"
        app:layout_constraintEnd_toStartOf="@+id/settingsIcon"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/searchIcon"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/BookmarkIcon"
        app:layout_constraintTop_toTopOf="@+id/textView" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mabry_pro_bold"
        android:text="@string/explore"
        android:textColor="@color/headlinesText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/tablayout_shimmer_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"


        app:layout_constraintBottom_toBottomOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="@+id/tabLayout"
        app:layout_constraintTop_toTopOf="@+id/tabLayout"
        app:shimmer_auto_start="true"
        tools:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />

            <include layout="@layout/shimmer_tablayout_view_holder" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:tabIndicatorColor="@color/tabLayoutIndicatorColor"
        app:tabMode="auto"
        app:tabSelectedTextColor="@color/tabLayoutSelectedColor"
        tools:visibility="visible">


    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/latest"
        android:fontFamily="@font/mabry_pro_bold"
        android:textColor="@color/headlinesText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/list_shimmer_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:shimmer_auto_start="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/shimmer_post_view_holder" />

            <include layout="@layout/shimmer_post_view_holder" />

            <include layout="@layout/shimmer_post_view_holder" />

            <include layout="@layout/shimmer_post_view_holder" />

            <include layout="@layout/shimmer_post_view_holder" />

            <include layout="@layout/shimmer_post_view_holder" />

            <include layout="@layout/shimmer_post_view_holder" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PostList"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:listitem="@layout/post_view_holder_layout"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>